Bug 83943 - EDITING: Form-Design - changing columns of tablecontrol crashes LO, when tabelcontrol isn't high enough
Summary: EDITING: Form-Design - changing columns of tablecontrol crashes LO, when tabe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords:
: 82774 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-09-16 18:49 UTC by Robert Großkopf
Modified: 2014-09-26 12:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Open one of the forms for editing. Let you show properties of column and switch to next. (29.14 KB, application/vnd.oasis.opendocument.base)
2014-09-16 18:49 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2014-09-16 18:49:20 UTC
Created attachment 106387 [details]
Open one of the forms for editing. Let you show properties of column and switch to next.

Open the attached database.
Open one form for editing.
Mark one field of the tablecontrol with right mousebutton.
Let you show the properties of "Column".
Go to next column.
LO crashes, when the tablecontrol isn't high enough for more than one row.
Comment 1 Robert Großkopf 2014-09-16 18:57:49 UTC
This bug is also reported in Bug82774 with very much misleading information. The buggy behavior has nothing to do with MySQL and a subform and any special cases. It appears on every system reported there and exist since the first version of LO.
The bug disappears, when you change the height of the tablecontrol a little bit so more than one row could be shown.
I set this bug to NEW, because it had been confirmed in Bug82774.
Comment 2 Robert Großkopf 2014-09-16 19:02:27 UTC
*** Bug 82774 has been marked as a duplicate of this bug. ***
Comment 3 Caolán McNamara 2014-09-26 11:27:04 UTC
This is recursing to death in BrowseBox::GoToColumnId when trying to go to the next column it knows that cell can't be shown so it tries to wiggle it into view, but its never going to be able to get the cell visible because there simply isn't enough space in the parent to show any of it
Comment 4 Commit Notification 2014-09-26 12:14:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=827ae65e8577e285b8ad30f4a81af087658e42fa

Resolves: fdo#83943 avoid infinite recursion



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.