Resolves: fdo#83943 avoid infinite recursion

when attempting to make a cell visible when
the parent simply isn't large enough to show
any part of the cell

Change-Id: I987c9b3be30a66a5e1e27ad9e452f2ca65330d9e